--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/vivianc11/Team-Profile-Generator#readme",
   "dependencies": {
-    "inquirer": "^9.1.2",
+    "bootstrap-icons": "^1.9.1",
+    "inquirer": "^8.2.0",
     "jest": "^29.0.3"
   }
 }
